@@ -2,9 +2,11 @@ appgladedir = $(datadir)/gmpc/
 appglade_DATA =	gmpc.glade \
 		add-browser.glade\
 		open-location.glade\
-		playlist.glade
+		playlist.glade\
+		playlist3.glade
 
 EXTRA_DIST = gmpc.glade \
 		add-browser.glade\
 		open-location.glade\
-		playlist.glade
+		playlist.glade\
+		playlist3.glade
