@@ -1,3 +1,6 @@
+22-10-2004 Qball <Qball@qballcow.nl.
+	* Started initial work on playlist version 3
+
 16-10-2004 Qball <Qball@qballcow.nl>
 	* Fixed severall smaller autotools issues.
 	* src/eggtrayicon.c:	Fixed gettex compile time error.
